--- a/you/index.html
+++ b/you/index.html
@@ -389,7 +389,9 @@ form .btn2{
     .container{
         width: 500px;
     }
-    
+    #header{
+        margin:0;
+    }
     .header-text p{
      font-size: 20px;
      margin-top:-3.5rem;
