--- a/you/index.html
+++ b/you/index.html
@@ -390,7 +390,7 @@ form .btn2{
         width: 500px;
     }
     #header{
-        margin:0;
+        margin-left:0;
     }
     .header-text p{
      font-size: 20px;
