--- a/you/index.html
+++ b/you/index.html
@@ -509,6 +509,7 @@ margin-left: 6rem;
 
     .tab-links {
         margin: 0 2rem; /* Adjusted spacing for smaller screens */
+        font-size:1rem;
     }
     #icon{
         margin-left: 3rem;
