--- a/you/index.html
+++ b/you/index.html
@@ -508,7 +508,7 @@ margin-left: 6rem;
     }
 
     .tab-links {
-        margin: 0 1.2rem; /* Adjusted spacing for smaller screens */
+        margin: 2rem; /* Adjusted spacing for smaller screens */
         font-size:1rem;
     }
     #icon{
