--- a/you/index.html
+++ b/you/index.html
@@ -508,8 +508,8 @@ margin-left: 6rem;
     }
 
     .tab-links {
-        margin: 0 3rem; /* Adjusted spacing for smaller screens */
-        font-size:2rem;
+        margin: 0 3px; /* Adjusted spacing for smaller screens */
+        font-size:1rem;
     }
     #icon{
         margin-left: 3rem;
