--- a/you/index.html
+++ b/you/index.html
@@ -394,6 +394,7 @@ form .btn2{
     #header{
         width:100%;
         height:30vh;
+        position:relative;
     }
     .header-text p{
      font-size: 16px;
