--- a/you/index.html
+++ b/you/index.html
@@ -392,9 +392,16 @@ form .btn2{
         margin: 0 auto;
     }
     #header{
-        width:100%;
-        height:30vh;
-        position:relative;
+         
+        width: 100%;
+        height: 40vh; /* Reduced height for smaller screens */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-image: url(https://i.ibb.co/yPMVDbL/2.jpg);
+        margin-left: 0; /* Removed left margin for better centering */
+    }
+
     }
     .header-text p{
      font-size: 16px;
