--- a/you/index.html
+++ b/you/index.html
@@ -384,11 +384,12 @@ form .btn2{
     color: blue;
 }
 /*------------css for small screen-------*/
-@media only screen and (max-width:750px) {
+@media only screen and (max-width:600px) {
     .container {
-        max-width: 500px;
+        max-width: 100%;
         width: 100%;
         margin: 0 auto;
+        padding:0;
     }
 
     #header {
