--- a/you/index.html
+++ b/you/index.html
@@ -39,7 +39,7 @@ html{
 #header{
     width: 100%;
     height: 100vh;
-    background-position: center;
+    background-position:relative;
     background-repeat: no-repeat;
     background-size: cover;
     margin-left: 2rem;
